turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:4: error: value double is not a member of Int
    droite(360.double)
               ^